--- a/index.html
+++ b/index.html
@@ -47,9 +47,13 @@
         <a href="#"><i class="fab fa-facebook-f"></i></a>
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-youtube"></i></a>
-
       </div>
 
+      <div class="navbar__menu">
+        <i class="fas fa-bars"></i>
+      </div>
+
+  
     </nav>
 
     <!--Main (Principal)-->
