--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
         <li class="navbar__link">actividades</li>
         <li class="navbar__link">galeria</li>
         <li class="navbar__link">contacto</li>
+
+        <div class="navbar__redes--item">
+          <a href="#"><i class="fab fa-facebook-f"></i></a>
+          <a href="#"><i class="fab fa-instagram"></i></a>
+          <a href="#"><i class="fab fa-youtube"></i></a>
+        </div>
+
+
+
       </ul>
 
       <div class="navbar__redes">
