--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <i class="fas fa-bars"></i>
       </div>
 
-  
+
     </nav>
 
     <!--Main (Principal)-->
@@ -89,6 +89,18 @@
       </div>
 
     </main>
+
+
+    <!--boton whatsapp-->
+    <a href="https://api.whatsapp.com/send?phone=+51987654321" class="btn__wsp" target="_blank">
+      <i class="fa fa-whatsapp icono"></i>
+    </a>
+
+    <!-- Ir Arriba -->
+    <button class="btn__scrolltop" id="btn_scrolltop">
+      <i class="fas fa-chevron-up"></i>
+    </button>
+
 
     <!--Rehma-->
 
@@ -162,12 +174,46 @@
       <div class="iglesia__text">
         <h3 class="iglesia__tituloPre">Somos Iglesia!</h3>
         <div class="iglesia__linea"></div>
-        <h1 class="iglesia__titulo">NUESTRAS ACTIVIDADES</h1>
+        <h1 class="iglesia__titulo">ACTIVIDADES</h1>
         <h4 class="iglesia__tituloSub">Tristán Suárez</h4>
       </div>
 
 
       <div class="iglesia__contenedor">
+
+
+        <!--Card niños-->
+        <div class="iglesia__card">
+          <div class="iglesia__imagen iglesia__imagen--niños">
+          </div>
+          <div class="iglesia__cardTexto">
+            <h1 class="iglesia__cardTitulo">Niños</h1>
+            <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
+              servicio. </p>
+
+            <input type="button" class="iglesia__boton" value="VER MÁS!">
+
+
+
+          </div>
+        </div>
+
+
+        <!--Card pre-adolescentes-->
+        <div class="iglesia__card">
+          <div class="iglesia__imagen iglesia__imagen--preAdolescentes">
+          </div>
+          <div class="iglesia__cardTexto">
+            <h1 class="iglesia__cardTitulo">Preadolescentes</h1>
+            <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
+              servicio. </p>
+
+            <input type="button" class="iglesia__boton" value="VER MÁS!">
+
+
+
+          </div>
+        </div>
 
         <!--Card adolescentes-->
         <div class="iglesia__card">
@@ -237,27 +283,47 @@
 
       <div class="footer__grupo1">
 
-
-
-
+        <!--COMUNIDAD-->
         <div class="footer__texto">
           <h2 class="footer__titulo">COMUNIDAD</h2>
-          <P class="footer__parrafo">Iglesia El Encuentro Tristán Suárez
-            ¡Bienvenido al lugar de tu encuentro con Dios, gracias por acompañarnos!…</P>
-
+          <!--ubicacion-->
+          <ul>
+            <li class="footer__ubicacion">
+              <i class="fas fa-map-marker-alt"></i>
+              <p class="footer__parrafo"> Natta 362, Tristán Suárez, Prov. Bs. As./ Argentina</p>
+            </li>
+          </ul>
+          <!--email-->
+          <ul>
+            <li class="footer__correo">
+              <i class="far fa-envelope"></i>
+              <p class="footer__parrafo">javier@iglesiaelencuentro.org.ar</p>
+            </li>
+          </ul>
+          <!--Reuniones-->
+          <ul>
+            <li class="footer__reuniones">
+              <i class="fas fa-cross"></i>
+              <p class="footer__parrafo"><b>Cultos Centrales:</b>
+                Miercoles 19:00h y Domingos 10:30h
+                <b>Consultorio Pastoral:</b>
+                Marte 17h a. 20h
+                Miercoles 17hs a 19h</p>
+            </li>
+          </ul>
         </div>
 
 
-
+        <!--SOBRE NOSOTROS-->
         <div class="footer__texto1">
           <h2 class="footer__titulo1">SOBRE NOSOTROS</h2>
           <P class="footer__parrafo1">Iglesia El Encuentro Tristán Suárez
             ¡Bienvenido al lugar de tu encuentro con Dios, gracias por acompañarnos!…</P>
 
         </div>
-
+        <!--SEGUINOS-->
         <div class="footer__texto2">
-          <h2 class="footer__titulo2">SIGUENOS</h2>
+          <h2 class="footer__titulo2">SEGUINOS</h2>
           <div class="footer__social">
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-instagram"></a>
@@ -270,7 +336,7 @@
       </div>
 
       <div class="footer__grupo2">
-        <small>&copy; <b>sebygalla</b> - Todos los derechos reservados </small>
+        <small>&copy; <b>sebygalla 2022</b> - Todos los derechos reservados </small>
       </div>
 
 
