--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         <i class="fas fa-bars"></i>
       </div>
 
+      <div class="navbar__close">
+        <i class="fas fa-times"></i>
+      </div>
+
 
     </nav>
 
