--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 
       <ul class="navbar__item">
         <li class="navbar__link navbar__link--activo">inicio</li>
-        <li class="navbar__link">nosotros</li>
-        <li class="navbar__link">actividades</li>
+        <li class="navbar__link"><a href="#">nosotros</a></li>
+        <li class="navbar__link"><a href="#actividades">actividades</a></li>
         <li class="navbar__link">galeria</li>
-        <li class="navbar__link">contacto</li>
+        <li class="navbar__link"><a href="#contacto"></a>contacto</li>
 
         <div class="navbar__redes--item">
           <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -108,7 +108,7 @@
 
     <article class="article" id="rehma">
 
-      <div class="article__card">
+      <div class="article__card" >
 
 
         <svg viewBox="0 0 402 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -121,7 +121,7 @@
         </svg>
 
 
-        <div class="article__texto" id="rehma-texto">
+        <div class="article__texto" data-aos="fade-right" id="rehma-texto">
           <blockquote cite="https://www.bible.com/es/bible/128/JOS.1.NVI">
             <p class="article__parrafo">Ya te lo he ordenado: ¡Sé fuerte y valiente! <br> ¡No tengas miedo ni te
               desanimes! Porque el Señor tu
@@ -283,7 +283,7 @@
 
     <footer class="footer">
 
-      <div class="footer__grupo1">
+      <div class="footer__grupo1" id="contacto">
 
         <!--COMUNIDAD-->
         <div class="footer__texto">
