delete redes sociales

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Iglesia Cristiana "El Encuentro"- Tristán Suárez</title>
-  <link rel="icon" type="image/png" href="img/logotipo el encuentro.png" >
+  <link rel="icon" type="image/png" href="img/logotipo el encuentro.png">
 
   <!-- HTML -->
 
@@ -47,19 +47,14 @@
         <li class="navbar__link">galeria</li>
         <li class="navbar__link"><a href="#contacto"></a>contacto</li>
 
-        <div class="navbar__redes--item">
-          <a href="#"><i class="fab fa-facebook-f"></i></a>
-          <a href="#"><i class="fab fa-instagram"></i></a>
-          <a href="#"><i class="fab fa-youtube"></i></a>
-        </div>
-
+        <p class="navbar__parrafo">
+          »Porque tanto amó Dios al mundo que dio a su Hijo unigénito, para que todo el que cree en él no se pierda, sino que tenga vida eterna. <br>
+          Juan 3:16- NVI
+        </p>
+        
       </ul>
 
-      <div class="navbar__redes">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
-      </div>
+   
 
       <div class="navbar__menu">
         <i class="fas fa-bars"></i>
@@ -108,7 +103,7 @@
 
     <article class="article" id="rehma">
 
-      <div class="article__card" >
+      <div class="article__card">
 
 
         <svg viewBox="0 0 402 500" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -171,7 +166,7 @@
 
     <!-- Actividades de la Iglesia-->
 
-    <section class="iglesia" id="actividades">
+    <section class="iglesia">
 
       <div class="iglesia__text">
         <h3 class="iglesia__tituloPre">Somos Iglesia!</h3>
@@ -207,22 +202,6 @@
           </div>
           <div class="iglesia__cardTexto">
             <h1 class="iglesia__cardTitulo">Preadolescentes</h1>
-            <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
-              servicio. </p>
-
-            <input type="button" class="iglesia__boton" value="VER MÁS!">
-
-
-
-          </div>
-        </div>
-
-        <!--Card adolescentes-->
-        <div class="iglesia__card" data-aos="zoom-in">
-          <div class="iglesia__imagen iglesia__imagen--adolescentes">
-          </div>
-          <div class="iglesia__cardTexto">
-            <h1 class="iglesia__cardTitulo">Adolescentes</h1>
             <p class="iglesia__cardParrafo">The cake at the Sacher hotel is amongst the finest in all the lands es un
               servicio. </p>
 
