--- a/index.html
+++ b/index.html
@@ -129,16 +129,9 @@
               Josué 1:9 (NVI)
             </p>
           </blockquote>
-
         </div>
-
-
-
         <p class="article__pie">Palabra Rehma 2022</p>
-
       </div>
-
-
     </article>
 
     <!--Precursores (Videos de Youtube)-->
@@ -246,8 +239,9 @@
 
     </section>
 
+    <!--Formulario-->
     <section class="form">
-      <form action="enviar.php" method="post" class="form__contenedor">
+      <form action="https://formspree.io/f/mbjwgkgl" method="POST" class="form__contenedor" id="form">
         <h2 class="form__titulo">CONTACTO</h2>
         <input class="form__input" type="text" name="nombre" placeholder="Nombre" required>
         <input class="form__input" type="text" name="correo" placeholder="Correo" required>
