--- a/index.html
+++ b/index.html
@@ -134,6 +134,36 @@
       </div>
     </article>
 
+
+    <!--estructura de texto y foto-->
+    
+    <section class="mision">
+      <div class="mision__texto">
+        <h3 class="mision__tituloPre">Somos Iglesia!</h3>
+        <div class="mision__linea"></div>
+        <h1 class="mision__titulo">Mision y Vision</h1>
+        <h4 class="mision__tituloSub">Tristán Suárez</h4>
+        <p class="mision__parrafo">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
+          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
+          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
+          placeat
+          harum quo exercitationem natus quae! Voluptatem vero minima illum, quos itaque nemo dolore impedit sit amet
+          praesentium sequi laudantium nisi omnis porro laboriosam atque recusandae harum possimus voluptas accusantium
+          dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
+          illum
+          impedit? Voluptate illum ipsam similique! Hic, suscipit?
+        </p>
+      </div>
+
+      <div class="mision__imagen">
+        <img src="img/smartphone.png" alt="">
+      </div>
+
+    </section>
+
+
+
     <!--Precursores (Videos de Youtube)-->
 
     <aside class="aside">
