--- a/index.html
+++ b/index.html
@@ -140,8 +140,7 @@
     <section class="mision">
       <div class="mision__texto">
         <h3 class="mision__tituloPre">Somos Iglesia!</h3>
-        <div class="mision__linea"></div>
-        <h1 class="mision__titulo">Mision y Vision</h1>
+        <h1 class="mision__titulo">Misión y Visión</h1>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
         <p class="mision__parrafo">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
@@ -153,11 +152,15 @@
           dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
           illum
           impedit? Voluptate illum ipsam similique! Hic, suscipit?
+
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque consequatur. 
+
+       
         </p>
       </div>
 
       <div class="mision__imagen">
-        <img src="img/smartphone.png" alt="">
+        <img src="img/Pastor2.jpg" alt="">
       </div>
 
     </section>
@@ -193,7 +196,6 @@
 
       <div class="iglesia__text">
         <h3 class="iglesia__tituloPre">Somos Iglesia!</h3>
-        <div class="iglesia__linea"></div>
         <h1 class="iglesia__titulo">ACTIVIDADES</h1>
         <h4 class="iglesia__tituloSub">Tristán Suárez</h4>
       </div>
