--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
 
 
     <!--estructura de texto y foto-->
-    
+
     <section class="mision">
       <div class="mision__texto">
         <h3 class="mision__tituloPre">Somos Iglesia!</h3>
@@ -153,17 +153,33 @@
           illum
           impedit? Voluptate illum ipsam similique! Hic, suscipit?
 
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque consequatur. 
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia
+          ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum
+          voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
+          consequatur.
 
-       
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
+          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
+          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
+          placeat
+          harum quo exercitationem natus quae! Voluptatem vero minima illum, quos itaque nemo dolore impedit sit amet
+          praesentium sequi laudantium nisi omnis porro laboriosam atque recusandae harum possimus voluptas accusantium
+          dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
+          illum
+          impedit? Voluptate illum ipsam similique! Hic, suscipit?
+
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia
+          ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum
+          voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
+          consequatur.
+
+
         </p>
       </div>
 
-      <div class="mision__imagen">
-        <img src="img/Pastor2.jpg" alt="">
-      </div>
-
     </section>
+
+
 
 
 
@@ -194,7 +210,7 @@
 
     <section class="iglesia">
 
-      <div class="iglesia__text">
+      <div class="iglesia__texto">
         <h3 class="iglesia__tituloPre">Somos Iglesia!</h3>
         <h1 class="iglesia__titulo">ACTIVIDADES</h1>
         <h4 class="iglesia__tituloSub">Tristán Suárez</h4>
@@ -320,9 +336,9 @@
           <ul>
             <li class="footer__reuniones">
               <i class="fas fa-cross"></i>
-              <p class="footer__parrafo"><strong>Cultos Centrales:</strong>
+              <p class="footer__parrafo"><strong>CULTOS CENTRALES:</strong>
                 Miercoles 19:00hs y Domingos 10:30hs
-                <strong>Consultorio Pastoral:</strong>
+                <strong>CONSULTORIO PASTORAL:</strong>
                 Martes 17hs a 20hs.
                 Miercoles 17hs a 19hs</p>
             </li>
