--- a/index.html
+++ b/index.html
@@ -230,9 +230,6 @@
               servicio. </p>
 
             <input type="button" class="iglesia__boton" value="VER MÁS!">
-
-
-
           </div>
         </div>
 
@@ -247,9 +244,6 @@
               servicio. </p>
 
             <input type="button" class="iglesia__boton" value="VER MÁS!">
-
-
-
           </div>
         </div>
 
@@ -263,8 +257,6 @@
               servicio. </p>
 
             <input type="button" class="iglesia__boton" value="VER MÁS!">
-
-
           </div>
         </div>
 
@@ -279,13 +271,41 @@
               servicio. </p>
 
             <input type="button" class="iglesia__boton" value="VER MÁS!">
-
-
           </div>
         </div>
       </div>
 
     </section>
+
+    <!--Modal niños-->
+
+    <div class="modal" id="modal">
+      <div class="modal__contenedor">
+        <picture class="modal__picture">
+        </picture>
+
+        <div class="modal__texto">
+          <h1 class="modal__titulo">NIÑOS</h1>
+          <p class="modal__parrafo">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sint, eveniet optio pariatur provident quia
+            veniam quae dolor. Laboriosam perspiciatis rem provident adipisci optio! Assumenda, est magnam? Voluptates,
+            nostrum numquam?
+
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sint, eveniet optio pariatur provident quia
+            veniam quae dolor. Laboriosam perspiciatis rem provident adipisci optio! Assumenda, est magnam? Voluptates,
+            nostrum numquam?
+
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sint, eveniet optio pariatur provident quia
+            veniam quae dolor. Laboriosam perspiciatis rem provident adipisci optio! Assumenda, est magnam? Voluptates,
+            nostrum numquam?
+          </p>
+          <input type="button" class="modal__cerrar" value="CERRAR!">
+        </div>
+      </div>
+
+
+
+    </div>
 
     <!--Formulario-->
     <section class="form">
