--- a/index.html
+++ b/index.html
@@ -289,15 +289,10 @@
           <p class="modal__parrafo">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sint, eveniet optio pariatur provident quia
             veniam quae dolor. Laboriosam perspiciatis rem provident adipisci optio! Assumenda, est magnam? Voluptates,
+            nostrum numquam?Laboriosam perspiciatis rem provident adipisci optio! Assumenda, est magnam? Voluptates,
             nostrum numquam?
 
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sint, eveniet optio pariatur provident quia
-            veniam quae dolor. Laboriosam perspiciatis rem provident adipisci optio! Assumenda, est magnam? Voluptates,
-            nostrum numquam?
-
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sint, eveniet optio pariatur provident quia
-            veniam quae dolor. Laboriosam perspiciatis rem provident adipisci optio! Assumenda, est magnam? Voluptates,
-            nostrum numquam?
+    
           </p>
           <input type="button" class="modal__cerrar" value="CERRAR!">
         </div>
