--- a/index.html
+++ b/index.html
@@ -281,20 +281,19 @@
 
     <div class="modal" id="modal">
       <div class="modal__contenedor">
-        <picture class="modal__picture">
-        </picture>
+
 
         <div class="modal__texto">
           <h1 class="modal__titulo">NIÑOS</h1>
           <p class="modal__parrafo">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum sint, eveniet optio pariatur provident quia
-            veniam quae dolor. Laboriosam perspiciatis rem provident adipisci optio! Assumenda, est magnam? Voluptates,
-            nostrum numquam?Laboriosam perspiciatis rem provident adipisci optio! Assumenda, est magnam? Voluptates,
-            nostrum numquam?
+            En el Encuentro de Niños, acompañamos a los niños de entre 3 y 10 años, a encontrarse con Su Creador y
+            Salvador.
+            Para ello, utilizamos una dinámica que cambia cada domingo, abordando las verdades de la Palabra de Dios,
+            desde la enseñanza experimental, la adoración íntima y la recreación.
 
-    
+
           </p>
-          <input type="button" class="modal__cerrar" value="CERRAR!">
+          <input type="button" class="modal__cerrar" value="CERRAR">
         </div>
       </div>
 
