header  hover menu

--- a/index.html
+++ b/index.html
@@ -43,9 +43,9 @@
       <ul class="navbar__item">
         <li class="navbar__link navbar__link--activo">inicio</li>
         <li class="navbar__link"><a href="#">nosotros</a></li>
-        <li class="navbar__link"><a href="#actividades">actividades</a></li>
-        <li class="navbar__link">galeria</li>
-        <li class="navbar__link"><a href="#contacto"></a>contacto</li>
+        <li class="navbar__link"><a href="#">actividades</a></li>
+        <li class="navbar__link"><a href="#">testimonios</a></li>
+        <li class="navbar__link"><a href="#">contacto</a></li>
 
         <p class="navbar__parrafo">
           »Porque tanto amó Dios al mundo que dio a su Hijo unigénito, para que todo el que cree en él no se pierda,
@@ -282,11 +282,11 @@
 
     <!--Modal jovenes -->
 
-    <div class="container-all" id="modal">
+    <div class="popup__container" id="modal">
 
-      <div class="popup">
-        <div class="img"></div>
-        <div class="container-text">
+      <div class="popup__card">
+        <div class="popup__img"></div>
+        <div class="popup__text">
           <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ratione quidem sequi dolores, mollitia sed
             nihil vitae atque blanditiis dolore vero voluptatum placeat tempore aliquam veniam vel deleniti praesentium
@@ -296,7 +296,7 @@
             dolor tenetur aperiam sequi dicta!</p>
         </div>
 
-        <a href="#iglesiaCardJovenes" class="btn-close-popup">X</a>
+        <a href="#iglesiaCardJovenes" class="popupBtn__close">X</a>
       </div>
 
 
