--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
 
   <!-- HTML -->
 
+  <!--Fontawesome-->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!--Reset Pro-->
   <link rel="stylesheet" href="resetPro.css">
 
@@ -46,6 +51,7 @@
         <li class="navbar__link"><a href="#">actividades</a></li>
         <li class="navbar__link"><a href="#">testimonios</a></li>
         <li class="navbar__link"><a href="#">contacto</a></li>
+        
 
         <p class="navbar__parrafo">
           »Porque tanto amó Dios al mundo que dio a su Hijo unigénito, para que todo el que cree en él no se pierda,
@@ -90,7 +96,7 @@
 
     <!--boton whatsapp-->
     <a href="https://api.whatsapp.com/send?phone=+51987654321" class="btn__wsp" target="_blank">
-      <i class="fa fa-whatsapp icono"></i>
+      <i class="fa-brands fa-whatsapp"></i>
     </a>
 
     <!-- Ir Arriba -->
@@ -173,8 +179,20 @@
           voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
           consequatur.
 
-
         </p>
+        <div class="mision__icono">
+          <i class="fa-solid fa-book-bible"></i>
+          <i class="fa-solid fa-book-bible"></i>  
+          <i class="fa-solid fa-book-bible"></i>
+        </div>
+       
+
+
+
+
+
+
+
       </div>
 
     </section>
@@ -377,9 +395,9 @@
         <div class="footer__texto2">
           <h2 class="footer__titulo2">SEGUINOS</h2>
           <div class="footer__social">
-            <a href="#" class="fa fa-facebook"></a>
-            <a href="#" class="fa fa-instagram"></a>
-            <a href="#" class="fa fa-youtube"></a>
+            <a href="#" class="fa-brands fa-facebook"></a>
+            <a href="#" class="fa-brands fa-instagram"></a>
+            <a href="#" class="fa-brands fa-youtube"></a>
 
           </div>
 
@@ -396,8 +414,11 @@
 
 
 
-  <!-- Fontaewsome -->
-  <script src="https://kit.fontawesome.com/d5aeea23f5.js" crossorigin="anonymous"></script>
+  <!-- fontawesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+    integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <!-- Project -->
   <script src="main.js"></script>
 
