--- a/index.html
+++ b/index.html
@@ -141,12 +141,66 @@
     </article>
 
 
+    <!--Nosotros-->
+
+    <section class="nosotros">
+
+      <div class="nosotros__textoUno">
+
+        <h1 class="nosotros__titulo--uno">Mision</h1>
+        <h4 class="nosotros__tituloSub--uno">Tristán Suárez</h4>
+        <p class="nosotros__parrafo--uno">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
+          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
+          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
+          placeat
+
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
+          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
+          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
+          placeat
+        </p>
+      </div>
+
+      <div class="nosotros__imagenUno">
+        <img src="img/pastor corsi.jpg" alt="">
+      </div>
+
+      <div class="nosotros__imagenDos">
+        <img src="img/Pastor2.jpg" alt="">
+      </div>
+
+      <div class="nosotros__textoDos">
+
+        <h1 class="nosotros__titulo--dos">Vision</h1>
+        <h4 class="nosotros__tituloSub--dos">Tristán Suárez</h4>
+        <p class="nosotros__parrafo--dos">
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
+          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
+          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
+          placeat
+
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
+          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
+          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
+          placeat
+        </p>
+      </div>
+
+    </section>
+
+
+
+
+
+
+
     <!--estructura de texto y foto-->
 
     <section class="mision">
       <div class="mision__texto">
         <h3 class="mision__tituloPre">Somos Iglesia!</h3>
-        <h1 class="mision__titulo">Misión y Visión</h1>
+        <h1 class="mision__titulo">Nosotros</h1>
         <h4 class="mision__tituloSub">Tristán Suárez</h4>
         <p class="mision__parrafo">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
