--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       </div>
 
       <div class="nosotros__imagenUno">
-        <img src="img/pastor corsi.jpg" alt="">
+        <img src="img/Pastor2.jpg" alt="">
       </div>
 
       <div class="nosotros__imagenDos">
@@ -447,7 +447,7 @@
       </div>
 
       <div class="footer__grupo2">
-        <small>&copy; <strong>2022 sebygalla</strong> - Todos los derechos reservados </small>
+        <small>&copy; <strong>2022 sebygalla</strong> /Iglesia El Encuentro Tristan Suarez- Todos los derechos reservados </small>
       </div>
 
     </footer>
