Redes sociales modal

--- a/index.html
+++ b/index.html
@@ -346,13 +346,19 @@
       <div class="popup__card">
         <div class="popup__img"></div>
         <div class="popup__text">
-          <h1>Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+          <h1>Ministerio Jovenes</h1>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni ratione quidem sequi dolores, mollitia sed
             nihil vitae atque blanditiis dolore vero voluptatum placeat tempore aliquam veniam vel deleniti praesentium
             quia maiores reiciendis. Culpa maxime minus, tempore architecto, autem eligendi quia accusamus ipsa,
-            similique itaque eos quos! Tempore harum aliquid aspernatur!</p>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Explicabo rerum culpa neque eos esse. Aspernatur
-            dolor tenetur aperiam sequi dicta!</p>
+            similique itaque eos quos!
+          </p>
+
+          <div class="popup__social">
+            <a href="#" class="fa-brands fa-facebook"></a>
+            <a href="#" class="fa-brands fa-instagram"></a>
+            <a href="#" class="fa-brands fa-youtube"></a>
+          </div>
+
         </div>
 
         <a href="#iglesiaCardJovenes" class="popupBtn__close">X</a>
@@ -447,7 +453,7 @@
       </div>
 
       <div class="footer__grupo2">
-        <small>&copy; <strong>2022 sebygalla</strong> /Iglesia El Encuentro Tristan Suarez- Todos los derechos reservados </small>
+        <small>&copy; <strong>2022 sebygalla</strong> /Todos los derechos reservados </small>
       </div>
 
     </footer>
