--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
       <div class="nosotros__textoUno">
 
-        <h1 class="nosotros__titulo--uno">Mision</h1>
+        <h1 class="nosotros__titulo--uno">MISION</h1>
         <h4 class="nosotros__tituloSub--uno">Tristán Suárez</h4>
         <p class="nosotros__parrafo--uno">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
@@ -163,16 +163,16 @@
       </div>
 
       <div class="nosotros__imagenUno">
-        <img src="img/Pastor2.jpg" alt="">
+        <img src="img/priscilla-du-preez-9CMUPez8wLo-unsplash.jpg" alt="">
       </div>
 
       <div class="nosotros__imagenDos">
-        <img src="img/Pastor2.jpg" alt="">
+        <img src="img/sincerely-media-dGxOgeXAXm8-unsplash.jpg" alt="">
       </div>
 
       <div class="nosotros__textoDos">
 
-        <h1 class="nosotros__titulo--dos">Vision</h1>
+        <h1 class="nosotros__titulo--dos">VISION</h1>
         <h4 class="nosotros__tituloSub--dos">Tristán Suárez</h4>
         <p class="nosotros__parrafo--dos">
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
@@ -384,16 +384,6 @@
       </form>
 
     </section>
-
-
-
-
-
-
-
-
-
-
 
 
     <footer class="footer">
