--- a/index.html
+++ b/index.html
@@ -218,20 +218,7 @@
           voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
           consequatur.
 
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dicta officia totam, quam tempora eius repellat odio
-          tenetur nisi? Reprehenderit ratione sunt atque esse dicta nulla natus quod facere repellat dolor? Vero magnam
-          velit iusto quia dicta nulla, at neque consectetur facere quas praesentium qui amet quis doloribus eaque
-          placeat
-          harum quo exercitationem natus quae! Voluptatem vero minima illum, quos itaque nemo dolore impedit sit amet
-          praesentium sequi laudantium nisi omnis porro laboriosam atque recusandae harum possimus voluptas accusantium
-          dolor eos, culpa placeat repellat! Quia, consequatur! Consequatur nihil ut dolorem sapiente molestiae modi
-          illum
-          impedit? Voluptate illum ipsam similique! Hic, suscipit?
-
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores cupiditate consequatur laudantium mollitia
-          ratione exercitationem. Eius, iure odio. Repudiandae eveniet delectus reprehenderit nostrum ipsum eum
-          voluptatum illo harum velit sint quas inventore veritatis, deserunt, vero pariatur aliquid, enim neque
-          consequatur.
+      
 
         </p>
       </div>
@@ -246,7 +233,7 @@
 
     <aside class="aside">
       <div class="aside__texto">
-        <h2 class="aside__titulo">PRECURSORES</h2>
+        <h2 class="aside__titulo">Precursores</h2>
         <h3 class="aside__subtitulo">escuchalos!</h3>
       </div>
 
